# collective-risk-game-llm

./: .gitattributes  .gitignore  LICENSE  PROJECT.md  README.md  collective-risk-baseline-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json  collective-risk-baseline-srv-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json  collective-risk-baseline.task.json  collective-risk-pilot-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json  collective-risk-pilot.task.json  crg-proxy-probe-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json  crg-proxy-probe.task.json  crg_task.py  crg_task_server.py  crg_task_server_FULL.bak  example_task.py  kaggle_build_quant_wheels.py  kaggle_crsd_notebook.py  kaggle_exp_baseline.py  kaggle_exp_baseline_72b.py  kaggle_exp_baseline_large.py  kaggle_exp_comprehension.py  kaggle_exp_comprehension_72b.py  kaggle_exp_comprehension_large.py  kaggle_exp_framing.py  kaggle_exp_memory_ablation.py  kaggle_exp_persona.py  kaggle_exp_riskframing.py  proxy_probe_task.py  pyproject.toml  requirements-api.txt  requirements.txt  skills-lock.json
FAIRGAME/: api.py  download_model.py  kaggle_notebook.py  kaggle_notebook_online.py  main.py
crsd/: __init__.py  paths.py
frontier_results/: crsd_all_models.csv
paper/: .gitignore  README.md  main.tex  make_figures.py  make_pipeline.py  refs.bib  rsproca_new.cls
results/: analyze_comprehension.py  analyze_week2.py  make_week2_figs.py
slides/: .gitignore  delta_framing.txt  delta_persona.txt  presentation.tex  prompt_baseline.txt  prompt_baseline_r3.txt  prompt_en_template.txt  (+7 more)
(+179 files in other folders)
